# delivery

./: .gitignore  Dockerfile  Taskfile.yml  alembic.ini  docker-compose.yml  pyproject.toml
delivery/: settings.py
delivery/core/application/use_cases/commands/: assign_orders.py  create_order.py  move_couriers.py
delivery/core/application/use_cases/queries/: get_busy_couriers.py  get_not_completed_orders.py
delivery/core/domain/model/courier_aggregate/: courier_status.py  transport.py
delivery/core/domain/model/order_aggregate/: __init__.py  order.py  order_status.py
delivery/core/domain/model/shared_kernel/: location.py
delivery/core/domain/services/: find_courier_for_order.py
delivery/core/ports/: courier_repository_interface.py  order_repository_interface.py
delivery/infrastracture/adapters/postgres/: database.py
delivery/infrastracture/adapters/postgres/migrations/: env.py
delivery/infrastracture/adapters/postgres/models/: order.py
delivery/infrastracture/adapters/postgres/orm_models_mixins/: uuid_pk.py
delivery/infrastracture/adapters/postgres/repositories/: courier_repository.py  order_repository.py  uow.py
delivery/tests/: conftest.py
delivery/tests/fixtures/: courier.py  database.py
delivery/tests/integrations_tests/repositories/: conftest.py  test_courier_repository.py  test_order_repository.py
delivery/tests/integrations_tests/use_cases/: test_assign_orders.py  test_get_busy_couriers.py
delivery/tests/unit_tests/domain/model/courier_aggregate/: test_courier.py
delivery/tests/unit_tests/domain/model/order_aggregate/: test_order.py
delivery/tests/unit_tests/domain/model/shared_kernel/: test_location.py
delivery/tests/unit_tests/domain/services/: test_find_courier_for_order.py
delivery/utils/application_primitives/: query.py
delivery/utils/ddd_primitives/: __init__.py  aggregate.py  domain_service.py  entity.py  value_object.py
src/: .env.example  docker-entrypoint.sh  main.py  pyproject.toml
src/delivery/api/adapters/background_tasks/: tasks.py
src/delivery/api/adapters/http/: server.py
src/delivery/api/adapters/http/routes/: couriers.py  orders.py
src/delivery/api/adapters/kafka/topic_consumers/basket_confirmed/: consumer.py  event_schema.py
src/delivery/config/: __init__.py  background_jobs_delays.py  database.py  dependencies.py  enums.py  geo_service.py  kafka.py  logger.py
src/delivery/core/application/domain_event_handlers/: __init__.py  order_completed.py
src/delivery/core/application/use_cases/commands/: assign_orders.py  create_order.py  move_couriers.py
src/delivery/core/application/use_cases/queries/: get_busy_couriers.py  get_not_completed_orders.py
src/delivery/core/domain/model/courier_aggregate/: __init__.py  courier.py  transport.py
src/delivery/core/domain/model/order_aggregate/: order.py
src/delivery/core/domain/model/order_aggregate/domain_events/: order_completed_event.py
src/delivery/core/domain/services/: find_courier_for_order.py
src/delivery/core/ports/: bus_producer_interface.py  courier_repository_interface.py  geo_service_client.py  order_repository_interface.py
src/delivery/infrastracture/adapters/grpc/geo/: client.py
src/delivery/infrastracture/adapters/grpc/geo/proto/: geo.proto  geo_pb2.py  geo_pb2_grpc.py
src/delivery/infrastracture/adapters/kafka/: producer.py
src/delivery/infrastracture/adapters/kafka/integrations_events/: order_status_changed.py
src/delivery/infrastracture/adapters/postgres/: database.py
src/delivery/infrastracture/adapters/postgres/migrations/: env.py
src/delivery/infrastracture/adapters/postgres/migrations/versions/: 436c322996ac_add_courier_id_nullable_in_order.py  6ec21a12d722_init.py
src/delivery/infrastracture/adapters/postgres/models/: __init__.py  courier.py
src/delivery/infrastracture/adapters/postgres/orm_models_mixins/: __init__.py  aggregate.py  entity.py  time_stamp.py
src/delivery/infrastracture/adapters/postgres/repositories/: uow.py
src/delivery/tests/: conftest.py
src/delivery/tests/fixtures/: database.py
src/delivery/tests/integrations_tests/use_cases/: test_assign_orders.py  test_get_busy_couriers.py
src/delivery/tests/unit_tests/domain/model/order_aggregate/: test_order.py
src/delivery/utils/application_primitives/: __init__.py  command.py  event_handler.py  query.py
src/delivery/utils/ddd_primitives/: aggregate.py  domain_event.py
src/delivery/utils/exceptions/: code_exception.py
src/delivery/utils/uow/: uow_interface.py
